[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-structure-conditioning"
version = "0.1.0"
description = "Deterministic analysis and equivalence verification artifact for ESC study."
readme = "README.md"
requires-python = "==3.10.17"

dependencies = [
    "numpy==2.2.6",
    "pandas==2.2.3",
    "matplotlib==3.10.3",
    "pyzx==0.9.0",
]

authors = [
    { name = "Sean W. Null" },
    { name = "Dennis O. Baleta" }
]

license = { text = "MIT" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "qasm*", "reports*", "checksums*"]
